fix alignments

--- a/app/assets/stylesheets/reports.sass
+++ b/app/assets/stylesheets/reports.sass
@@ -121,22 +121,22 @@ body
       width: 170px
       text-align: right
     .strength_job
-      left: 448px
+      left: 410px
       top: 234px
     .strength_team
-      left: 548px
+      left: 510px
       top: 290px
     .strength_company
-      left: 540px
+      left: 505px
       top: 176px
     .title_company
-      left: 310px
+      left: 275px
       top: 35px + 20px
     .title_job
-      left: 100px
+      left: 60px
       top: 298px
     .title_team
-      left: 335px
+      left: 295px
       top: 435px
       
     .heading
@@ -260,7 +260,7 @@ body
 
     .factors_container
       background: image-url("report/hexagon-bg.png") no-repeat 10px top
-      height: 700px
+      height: 800px
       width: $width
 
       .factors_list
